syntax = "proto3";

option csharp_namespace = "RequestManagement.Server.Controllers";

service IncomingService {
  rpc GetAllIncomings (GetAllIncomingsRequest) returns (GetAllIncomingsResponse);
  rpc CreateIncoming (CreateIncomingRequest) returns (CreateIncomingResponse);
  rpc UpdateIncoming (UpdateIncomingRequest) returns (UpdateIncomingResponse);
  rpc DeleteIncoming (DeleteIncomingRequest) returns (DeleteIncomingResponse);
  rpc DeleteIncomings (DeleteIncomingsRequest) returns (DeleteIncomingResponse);
  rpc UploadMaterialIncoming(UploadMaterialIncomingRequest) returns (UploadMaterialIncomingResponse);
}

message UploadMaterialIncomingRequest {
    string warehouse_name= 1;
    repeated IncomingMaterialItem items = 2;
}

message UploadMaterialIncomingResponse {
  bool success = 1;
}


message IncomingMaterialItem{
    string registrator_type = 1;
    string registrator_number = 2;
    string registrator_date = 3;
    string receipt_order_number = 4;
    string receipt_order_date = 5;
    string application_number = 6;
    string application_date = 7;
    string application_responsible_name = 8;
    string application_equipment_name = 9;
    string application_equipment_code = 10;
    repeated IncomingMaterialStockMessage items = 11;
}

message IncomingMaterialStockMessage {
    string name = 1;
    string code = 2;
    string article = 3;
    string unit = 4;
    double finalBalance = 5;
}

message GetAllIncomingsRequest {
  string filter = 1;
  int32 warehouse_id = 2;
  string from_date = 3;
  string to_date = 4;
}

message GetAllIncomingsResponse {
  repeated Incoming incoming = 1;
  repeated IncomingStock incoming_stock = 2;
  repeated IncomingWarehouse incoming_warehouse = 3;
  repeated IncomingNomenclature incoming_nomenclature = 4;
  repeated IncomingApplication incoming_application = 5;
  repeated IncomingDriver incoming_driver = 6;
  repeated IncomingEquipment incoming_equipment = 7;
}

message CreateIncomingRequest {
  int32 stock_id = 1;
  double quantity = 2;
  string date = 3;
}

message CreateIncomingResponse {
  int32 id = 1;
}

message UpdateIncomingRequest {
  int32 id = 1;
  int32 stock_id = 2;
  double quantity = 3;
  string date = 4;
}

message UpdateIncomingResponse {
  bool success = 1;
}

message DeleteIncomingRequest {
  int32 id = 1;
}

message DeleteIncomingsRequest {
  repeated int32 id = 1;
}

message DeleteIncomingResponse {
  bool success = 1;
}

message Incoming {
  int32 id = 1;
  int32 stock_id = 2;
  double quantity = 3;
  string date = 4;
  string code = 5;
  string doc_type = 6;
  int32 application_id = 7;
}

message IncomingWarehouse {
    int32 id = 1;
    string name = 2;
    string Code = 3;
}

message IncomingApplication {
	int32 id = 1;
	string number = 2;
    string date = 3;
    int32 responsible_id = 4;
    int32 equipment_id = 5;
}

message IncomingEquipment {
    int32 id = 1;
    string name = 2;
    string license_plate = 3;
    string code = 4;
}

message IncomingDriver {
    int32 id = 1;
    string full_name = 2;  
    string short_name = 3; 
    string position = 4;   
    string Code = 5;
}

message IncomingStock {
    int32 id = 1;
    int32 warehouse_id = 2;
    double initial_quantity = 3;
    double received_quantity = 4;
    double consumed_quantity = 5;
    int32 nomenclature_id = 6;
}

message IncomingNomenclature {
    int32 id = 1;
    string code = 2;
    string name = 3;
    string article = 4;
    string unitOfMeasure = 5;
}